[tool.poetry]
name = "kmeaningful"
version = "0.3.0"
description = "Package for automating k-means clustering workflows"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/kmeaningful"
repository = "https://github.com/UBC-MDS/kmeaningful"
documentation = 'https://kmeaningful.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
sklearn = "^0.0"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"

[tool.semantic_release]
version_variable = "kmeaningful/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
